--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-.gitignore
+#hola, no tengo idea si esto debiera de poder verse y si siquiera está bien hecho, de igual manera espero que el que esté revisando esto tenga un buen día :D
 informacion_confidencial.txt
